--- a/web/app/components/large_event_component.html.erb
+++ b/web/app/components/large_event_component.html.erb
@@ -1,5 +1,5 @@
 <%= content_tag :div, id: dom_id(@event), data: { controller: 'large-event' } do %>
-	<div class="bg-white md:rounded-xl md:shadow-2xl md:border md:border-gray-100 overflow-hidden rounded-lg"
+	<div class="bg-white md:rounded-xl md:shadow-2xl md:border md:border-gray-100 overflow-hidden md:rounded-lg"
 			 data-event-favorited="<%= @user and @user.like?(@event) if @user and @user %>"
 			 data-event-identifier="<%= @event.id %>"
 			 data-event-description-open="false"
@@ -25,7 +25,7 @@
 			</div>
 		</div>
 		<div class="p-5">
-			<h1 class="px-3 mb-2 text-2xl font-medium leading-tight text-gray-700 md:px-0 md:text-4xl">
+			<h1 class="mb-2 text-2xl font-medium leading-tight text-gray-700 md:px-0 md:text-4xl">
 				<%= @event.details_name %>
 			</h1>
 			<div class="flex items-center -ml-1">
