--- a/web/app/components/hero/swipable_component.html.erb
+++ b/web/app/components/hero/swipable_component.html.erb
@@ -9,10 +9,10 @@
 					<div data-swipable-module="swipable-items"
 							 data-swipable-target="items">
 						<div class="px-5 mt-5 mb-1">
-							<div class="text-xl font-semibold md:text-2xl">
+							<div class="font-black md:text-2xl text-xl">
 								Que tipos de evento você curte?
 							</div>
-							<div class="text-sm w-content max-w-sm">
+							<div class="text-sm w-content max-w-sm text-gray-400">
 								Para receber sugestões personalizadas, indique os eventos que você curte ou não.
 							</div>
 						</div>
@@ -35,10 +35,10 @@
 					<% if @events_suggestions.present? %>
 						<div>
 							<div class="px-5 mt-5 mb-1">
-								<div class="text-xl font-semibold md:text-2xl">
+								<div class="font-black md:text-2xl text-xl">
 									Eventos escolhidos a dedo para você
 								</div>
-								<div class="text-sm w-content max-w-sm">
+								<div class="text-sm w-content max-w-sm text-gray-400">
 									Com base nos eventos que você gostou
 								</div>
 							</div>
