--- a/web/app/components/main_sidebar/horizontal_event_component.html.erb
+++ b/web/app/components/main_sidebar/horizontal_event_component.html.erb
@@ -1,7 +1,7 @@
 <%= content_tag :div, id: dom_id(@event, :'main-sidebar'), data: { controller: 'main-sidebar--horizontal-event', 'main-sidebar--horizontal-event-open-in-sidebar': @open_in_sidebar } do %>
 	<div class="bg-white border-gray-50 flex justify-between md:border md:border-0 md:shadow-none mt-2 mx-2 px-5 py-3 rounded-lg shadow-sm">
 		<div class="pr-6">
-			<div class="mb-1 text-sm  text-gray-500">
+			<div class="mb-1 text-sm">
 				<%= helpers.format_hour @event.first_day_time %>h ·
 				<span class="text-gray-400">
           <%= @event.categories_primary_name.titleize %>
@@ -13,10 +13,10 @@
 												action:     'click->main-sidebar--horizontal-event#openEvent',
 												'event-id': @event.id
 											},
-											class: 'font-semibold md:hover:underline mb-1 leading-snug text-gray-700' do %>
+											class: 'font-semibold md:hover:underline mb-1 leading-snug text-gray-500' do %>
 				<%= @event.details_name %>
 			<% end %>
-			<div class="text-sm  text-gray-500">
+			<div class="text-sm md:text-xs md:mt-2 text-gray-400">
 				<%= link_to helpers.limit_place_name_size(@event.place_details_name, 24), place_path(@event.place), class: 'md:hover:underline' %>
 			</div>
 			<div class="flex my-1 -ml-2">
