--- a/web/app/components/main_sidebar/large_event_component.html.erb
+++ b/web/app/components/main_sidebar/large_event_component.html.erb
@@ -126,7 +126,7 @@
 																		url:        event_path(similar_event),
 																		'event-id': similar_event.id
 																	},
-																	class: 'md:hover:underline font-medium mb-1 leading-snug text-gray-700' do %>
+																	class: 'md:hover:underline font-medium mb-1 leading-snug' do %>
 										<%= similar_event.details_name %>
 									<% end %>
 									<div class="text-sm  text-gray-500">
