--- a/web/app/views/layouts/_top-app-bar.html.erb
+++ b/web/app/views/layouts/_top-app-bar.html.erb
@@ -83,7 +83,7 @@
 				<!--				</svg>-->
 				<input autocomplete="false"
 							 name="q"
-							 class="bg-gray-50 focus:bg-white focus:border-transparent focus:outline-none focus:ring focus:ring-green-500 h-10 md:px-4 mx-auto placeholder-gray-500 px-2 py-1 rounded-full w-full"
+							 class="bg-gray-50 focus:bg-white focus:border-transparent focus:outline-none focus:ring focus:ring-green-500 h-10 px-4 mx-auto placeholder-gray-500 py-1 rounded-full w-full"
 							 id="text-field-shape-one"
 							 placeholder="Busque por eventos ou tags..."
 							 type="text"
