--- a/web/app/components/large_event_component.html.erb
+++ b/web/app/components/large_event_component.html.erb
@@ -13,7 +13,7 @@
 					 data-share-button-text="<%= helpers.strip_tags(helpers.limit_description_size(@event.details_description, 160)) %>"
 					 data-share-button-title="<%= @event.details_name %>"
 					 data-share-button-url="<%= event_url(@event, format: :html) %>">
-				<div class="relative flex px-3 py-2 mx-auto overflow-hidden text-sm text-gray-700 bg-gray-50 rounded-full shadow cursor-pointer ripple ripple-black hover:bg-white hover:text-green-500 w-content"
+				<div class="relative flex px-3 py-2 mx-auto overflow-hidden text-sm bg-gray-50 rounded-full shadow cursor-pointer ripple ripple-black hover:bg-white hover:text-green-500 w-content"
 						 data-action="click->share-button#share"
 						 data-controller="ripple">
 					<span>Compartilhar</span>
@@ -25,7 +25,7 @@
 			</div>
 		</div>
 		<div class="p-5">
-			<h1 class="mb-2 text-2xl font-medium leading-tight text-gray-700 md:px-0 md:text-4xl">
+			<h1 class="font-extrabold mb-2 text-2xl font-medium leading-tight md:px-0 md:text-4xl">
 				<%= @event.details_name %>
 			</h1>
 			<div class="flex items-center -ml-1">
@@ -35,7 +35,7 @@
 													'event-id': @event.id,
 													component:  'large-event'
 												},
-												class: 'p-2 cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:scale-105 hover:text-gray-700 items-center justify-center mdc-ripple-upgraded--unbounded rounded-full select-none tap-highlight-none text-gray-500 text-sm transform transition-transform' do %>
+												class: 'p-2 cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:scale-105 hover items-center justify-center mdc-ripple-upgraded--unbounded rounded-full select-none tap-highlight-none text-gray-500 text-sm transform transition-transform' do %>
 					<svg class="<%= helpers.class_names 'fill-current h-6 hover:scale-150 w-6',
 																							{ 'text-gray-500':  !@user&.like?(@event),
 																								'text-green-500': @user&.like?(@event) } %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -49,7 +49,7 @@
 													'event-id': @event.id,
 													component:  'large-event'
 												},
-												class: 'p-2 cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:scale-105 hover:text-gray-700 items-center justify-center mdc-ripple-upgraded--unbounded rounded-full select-none tap-highlight-none text-gray-500 text-sm transform transition-transform' do %>
+												class: 'p-2 cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:scale-105 hover items-center justify-center mdc-ripple-upgraded--unbounded rounded-full select-none tap-highlight-none text-gray-500 text-sm transform transition-transform' do %>
 					<svg class="<%= helpers.class_names 'fill-current h-6 hover:scale-150 w-6',
 																							{ 'text-gray-500': !@user&.dislike?(@event),
 																								'text-red-500':  @user&.dislike?(@event) } %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -70,7 +70,7 @@
 				</div>
 				<div class="text-sm"><%= helpers.format_hour @event.first_day_time %></div>
 			</div>
-			<div class="my-auto text-sm leading-snug text-gray-800">
+			<div class="my-auto text-sm leading-snug text-gray-600">
 				O evento acontecerá
 				<span class="font-semibold">daqui <%= helpers.distance_of_time_in_words @event.day_of_week['date'], DateTime.now %></span>
 				em uma
@@ -78,8 +78,10 @@
 			</div>
 		</div>
 		<div class="px-5 py-5 border-b border-gray-100">
-			<h2 class="font-bold text-gray-700 uppercase"><%= helpers.limit_place_name_size(@event.place_details_name, 40) %></h2>
-			<div class="mt-2 text-sm  leading-tight text-gray-700">
+			<h2 class="font-extrabold uppercase">
+				<%= helpers.limit_place_name_size(@event.place_details_name, 40) %>
+			</h2>
+			<div class="mt-2 text-sm  leading-tight">
 				<%= helpers.limit_address_name_size @event.geographic['address'] %>
 			</div>
 			<div>
@@ -97,8 +99,8 @@
 			</div>
 		</div>
 		<div class="px-5 py-5">
-			<h2 class="font-bold text-gray-700 uppercase">Sobre o evento</h2>
-			<div class="mt-2 text-sm  leading-relaxed text-gray-700 break-words text-with-html">
+			<h2 class="font-extrabold uppercase">Sobre o evento</h2>
+			<div class="mt-2 text-sm  leading-relaxed break-words text-with-html">
 				<%= @event.details_description.html_safe %>
 			</div>
 		</div>
