--- a/web/app/components/main_sidebar/group_by_day_list_component.html.erb
+++ b/web/app/components/main_sidebar/group_by_day_list_component.html.erb
@@ -5,13 +5,13 @@
 																					{ 'top-0':  helpers.mobile_device?,
 																						'top-12': helpers.mobile_device? && current_page?('/minha-agenda'),
 																						'top-16': !helpers.mobile_device? }) %>">
-				<h2 class="text-xl font-semibold md:text-2xl"><%= helpers.day_of_week(group[0].to_date).titlecase %></h2>
+				<h2 class="font-black text-xl"><%= helpers.day_of_week(group[0].to_date).titlecase %></h2>
 				<% if group[0].to_date == Date.today || group[0].to_date == Date.tomorrow %>
-					<div class="text-sm"><%= "#{I18n.l(group[0].to_date, format: :week)} · #{I18n.l(group[0].to_date, format: :long)}" %></div>
+					<div class="text-sm text-gray-400"><%= "#{I18n.l(group[0].to_date, format: :week)} · #{I18n.l(group[0].to_date, format: :long)}" %></div>
 				<% elsif group[0].to_date < Date.today + 7 %>
-					<div class="text-sm"><%= "#{I18n.l(group[0].to_date, format: :long)}" %></div>
+					<div class="text-sm text-gray-400"><%= "#{I18n.l(group[0].to_date, format: :long)}" %></div>
 				<% else %>
-					<div class="text-sm">daqui <%= distance_of_time_in_words group[0].to_date, DateTime.now %></div>
+					<div class="text-sm text-gray-400">daqui <%= distance_of_time_in_words group[0].to_date, DateTime.now %></div>
 				<% end %>
 			</div>
 			<div id="vertical-daily-events" class="py-2 mb-10">
