--- a/web/app/components/hero/train_event_component.html.erb
+++ b/web/app/components/hero/train_event_component.html.erb
@@ -1,5 +1,5 @@
 <%= content_tag :div, id: dom_id(@event, :hero), data: { controller: 'hero--train-event', 'hero--train-event-open-in-sidebar': @open_in_sidebar } do %>
-	<div class="flex p-5 border-b md:border-0 border-gray-50">
+	<div class="bg-white border-gray-50 flex justify-between md:border md:border-0 md:shadow-none mt-2 mx-2 pr-5 pl-3 py-3 rounded-lg shadow-sm">
 		<div class="flex flex-col mr-3 space-y-1">
 			<%= content_tag :div, data: { action: 'click->hero--train-event#like', 'event-id': @event.id }, class: 'h-full bg-green-50 hover:bg-green-200 cursor-pointer duration-100 ease-linear flex font-medium hover:px-3 hover:scale-105 hover:text-green-400 items-center justify-center p-2 rounded-lg select-none tap-highlight-none text-green-500 text-sm transform transition-transform' do %>
 				<svg class="h-5 text-green-500 fill-current hover:scale-150" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -19,33 +19,33 @@
 				<%= @event.categories_primary_name.titleize %>
 			</div>
 			<%= content_tag :a,
+											id:    dom_id(@event, 'hero--train-event__link'),
 											href:  event_path(@event),
 											data:  {
 												action:     'click->hero--train-event#openEvent',
 												'event-id': @event.id
 											},
-											class: 'font-semibold md:hover:underline mb-1 leading-snug text-gray-700' do %>
+											class: 'font-semibold md:hover:underline mb-1 leading-snug text-gray-500' do %>
 				<%= @event.details_name %>
 			<% end %>
-			<div class="text-sm  text-gray-500">
+			<div class="text-xs text-gray-400 mt-1">
 				<%= helpers.limit_place_name_size(@event.place_details_name, 24) %>
 			</div>
 		</div>
 		<div>
-			<div data-controller="ripple" class="shadow-xs relative w-32 mt-6 overflow-hidden rounded ripple ripple-white">
+			<div data-controller="ripple" class="h-20 md:h-24 md:w-40 mt-3 overflow-hidden relative ripple ripple-white rounded-lg shadow w-32">
 				<%= link_to event_path(@event),
 										data: {
 											action:     'click->hero--train-event#openEvent',
 											'event-id': @event.id
 										} do %>
-					<div class="bg-gray-50 aspect-ratio-16/9"></div>
 					<%= image_tag helpers.shrine_image_url(@event, :feed), {
 						loading: :lazy,
 						data:    {
 							action:     'click->hero--train-event#openEvent',
 							'event-id': @event.id
 						},
-						class:   'absolute cursor-pointer h-full left-0 object-center object-cover top-0 w-full overflow-hidden',
+						class:   'cursor-pointer h-full object-center object-cover w-full overflow-hidden',
 						onerror: "this.style.opacity='0'"
 					} rescue nil %>
 				<% end %>
