--- a/web/app/components/main_sidebar/horizontal_event_component.html.erb
+++ b/web/app/components/main_sidebar/horizontal_event_component.html.erb
@@ -27,7 +27,7 @@
 													'event-id': @event.id,
 													component:  'horizontal-event'
 												},
-												class: 'p-2 cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:scale-105 hover:text-gray-700 items-center justify-center rounded-full select-none tap-highlight-none text-sm transform transition-transform' do %>
+												class: 'p-2 cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:scale-105 hover:text-gray-500 items-center justify-center rounded-full select-none tap-highlight-none text-sm transform transition-transform' do %>
 					<svg class="<%= helpers.class_names 'fill-current h-5 hover:scale-150 w-5',
 																							{ 'text-gray-200 hover:text-gray-300': !@user&.like?(@event),
 																								'text-green-500':                    @user&.like?(@event) } %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -42,7 +42,7 @@
 													'event-id': @event.id,
 													component:  'horizontal-event'
 												},
-												class: 'p-2 cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:scale-105 hover:text-gray-700 items-center justify-center rounded-full select-none tap-highlight-none text-sm transform transition-transform' do %>
+												class: 'p-2 cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:scale-105 hover:text-gray-500 items-center justify-center rounded-full select-none tap-highlight-none text-sm transform transition-transform' do %>
 					<svg class="<%= helpers.class_names 'fill-current h-5 hover:scale-150 w-5',
 																							{ 'text-gray-200 hover:text-gray-300': !@user&.dislike?(@event),
 																								'text-red-500':                      @user&.dislike?(@event) } %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -53,7 +53,7 @@
 			</div>
 		</div>
 		<div>
-			<div data-controller="ripple" class="h-24 mt-3 overflow-hidden relative ripple ripple-white rounded-lg shadow w-40">
+			<div data-controller="ripple" class="h-20 md:h-24 md:w-40 mt-3 overflow-hidden relative ripple ripple-white rounded-lg shadow w-32">
 				<%= link_to event_path(@event),
 										data: {
 											action:     'click->main-sidebar--horizontal-event#openEvent',
