Adjust style of sign inputs

--- a/web/app/views/users/_form.html.erb
+++ b/web/app/views/users/_form.html.erb
@@ -27,12 +27,12 @@
 
 	<div class="text-gray-500">
 		<label class="font-medium">Nome</label>
-		<%= form.text_field :name, class: 'border px-2 py-2 rounded w-full mt-1' %>
+		<%= form.text_field :name, class: 'border focus:border-green-500 focus:outline-none focus:ring focus:ring-green-500 px-2 py-2 rounded shadow-sm w-full' %>
 	</div>
 
 	<div class="text-gray-500">
 		<label class="font-medium">Nome de usuário (username)</label>
-		<%= form.text_field :slug, class: 'border px-2 py-2 rounded w-full mt-1' %>
+		<%= form.text_field :slug, class: 'border focus:border-green-500 focus:outline-none focus:ring focus:ring-green-500 px-2 py-2 rounded shadow-sm w-full' %>
 	</div>
 
 	<button class="float-right px-5 py-2 antialiased font-semibold text-white bg-green-500 rounded-full">
