--- a/web/app/views/events/show.html.erb
+++ b/web/app/views/events/show.html.erb
@@ -111,13 +111,13 @@
 	</div>
 	<div class="md:col-span-4 mb-10 md:mb-0 mt-5 md:mt-0">
 		<div class="bg-gray-50 cursor-pointer flex font-bold hidden items-center bg-gray-50 md:block bottom-auto mb-5 relative rounded-xl w-auto p-3 space-y-2 text-gray-500 text-sm">
-			<a href="<%= @event.details_source_url %>" target="_blank" class="flex items-center justify-center flex-1 py-3 space-x-2 bg-white rounded shadow-sm">
+			<a href="<%= @event.details_source_url %>" target="_blank" class="transition-colors bg-white flex flex-1 group hover:bg-green-500 hover:text-white items-center justify-center py-3 rounded shadow-sm space-x-2 cursor-pointer">
 				<div>Abrir no facebook</div>
-				<svg class="h-4 text-gray-300 fill-current" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<svg class="group-hover:text-white transition-colors h-4 text-gray-300 fill-current" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
 					<path d="M16 16H2V2H9V0H2C0.89 0 0 0.9 0 2V16C0 17.1 0.89 18 2 18H16C17.1 18 18 17.1 18 16V9H16V16ZM11 0V2H14.59L4.76 11.83L6.17 13.24L16 3.41V7H18V0H11Z"/>
 				</svg>
 			</a>
-			<div class="flex items-center justify-center flex-1 py-3 space-x-2 bg-white rounded shadow-sm cursor-pointer"
+			<div class="transition-colors overflow-hidden relative bg-white flex flex-1 group hover:bg-green-500 hover:text-white items-center justify-center py-3 rounded shadow-sm space-x-2 cursor-pointer"
 					 data-controller="share-button"
 					 data-share-button-text="<%= strip_tags(limit_description_size(@event.details_description, 160)) %>"
 					 data-share-button-title="<%= @event.details_name %>"
@@ -125,7 +125,7 @@
 					 data-action="click->share-button#share">
 				<input class="absolute opacity-0" style="bottom: -30px" data-share-button-target="input" type="text" value="<%= event_url(@event, format: :html) %>">
 				<div>Compartilhar</div>
-				<svg class="h-4 text-gray-300 fill-current" viewBox="0 0 18 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<svg class="group-hover:text-white transition-colors h-4 text-gray-300 fill-current" viewBox="0 0 18 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 					<path d="M15 14.08C14.24 14.08 13.56 14.38 13.04 14.85L5.91 10.7C5.96 10.47 6 10.24 6 10C6 9.76 5.96 9.53 5.91 9.3L12.96 5.19C13.5 5.69 14.21 6 15 6C16.66 6 18 4.66 18 3C18 1.34 16.66 0 15 0C13.34 0 12 1.34 12 3C12 3.24 12.04 3.47 12.09 3.7L5.04 7.81C4.5 7.31 3.79 7 3 7C1.34 7 0 8.34 0 10C0 11.66 1.34 13 3 13C3.79 13 4.5 12.69 5.04 12.19L12.16 16.35C12.11 16.56 12.08 16.78 12.08 17C12.08 18.61 13.39 19.92 15 19.92C16.61 19.92 17.92 18.61 17.92 17C17.92 15.39 16.61 14.08 15 14.08Z"/>
 				</svg>
 			</div>
@@ -188,7 +188,7 @@
 				<path d="M16 16H2V2H9V0H2C0.89 0 0 0.9 0 2V16C0 17.1 0.89 18 2 18H16C17.1 18 18 17.1 18 16V9H16V16ZM11 0V2H14.59L4.76 11.83L6.17 13.24L16 3.41V7H18V0H11Z"/>
 			</svg>
 		</a>
-		<div class="flex items-center justify-center flex-1 py-3 space-x-2 bg-white rounded shadow-sm cursor-pointer"
+		<div class="flex items-center justify-center flex-1 py-3 space-x-2 bg-white rounded shadow-sm"
 				 data-controller="share-button"
 				 data-share-button-text="<%= strip_tags(limit_description_size(@event.details_description, 160)) %>"
 				 data-share-button-title="<%= @event.details_name %>"
