Adjust select in share buttons

--- a/web/app/views/events/show.html.erb
+++ b/web/app/views/events/show.html.erb
@@ -111,13 +111,13 @@
 	</div>
 	<div class="md:col-span-4 mb-10 md:mb-0 mt-5 md:mt-0">
 		<div class="bg-gray-50 cursor-pointer flex font-bold hidden items-center bg-gray-50 md:block bottom-auto mb-5 relative rounded-xl w-auto p-3 space-y-2 text-gray-600 text-sm">
-			<a href="<%= @event.details_source_url %>" target="_blank" class="transition-colors bg-white flex flex-1 group hover:bg-green-500 hover:text-white items-center justify-center py-3 rounded shadow-sm space-x-2 cursor-pointer">
+			<a href="<%= @event.details_source_url %>" target="_blank" class="select-none transition-colors bg-white flex flex-1 group hover:bg-green-500 hover:text-white items-center justify-center py-3 rounded shadow-sm space-x-2 cursor-pointer">
 				<div>Abrir no facebook</div>
 				<svg class="group-hover:text-white transition-colors h-4 text-gray-400 fill-current" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
 					<path d="M16 16H2V2H9V0H2C0.89 0 0 0.9 0 2V16C0 17.1 0.89 18 2 18H16C17.1 18 18 17.1 18 16V9H16V16ZM11 0V2H14.59L4.76 11.83L6.17 13.24L16 3.41V7H18V0H11Z"/>
 				</svg>
 			</a>
-			<div class="transition-colors overflow-hidden relative bg-white flex flex-1 group hover:bg-green-500 hover:text-white items-center justify-center py-3 rounded shadow-sm space-x-2 cursor-pointer"
+			<div class="select-none transition-colors overflow-hidden relative bg-white flex flex-1 group hover:bg-green-500 hover:text-white items-center justify-center py-3 rounded shadow-sm space-x-2 cursor-pointer"
 					 data-controller="share-button"
 					 data-share-button-text="<%= strip_tags(limit_description_size(@event.details_description, 160)) %>"
 					 data-share-button-title="<%= @event.details_name %>"
@@ -182,13 +182,13 @@
 	</div>
 
 	<div class="fixed bottom-0 flex items-center w-screen px-3 py-2 space-x-2 text-sm font-medium text-gray-500 cursor-pointer md:hidden bg-gray-50">
-		<a href="<%= @event.details_source_url %>" target="_blank" class="flex items-center justify-center flex-1 py-3 space-x-2 bg-white rounded shadow-sm">
+		<a href="<%= @event.details_source_url %>" target="_blank" class="select-none flex items-center justify-center flex-1 py-3 space-x-2 bg-white rounded shadow-sm">
 			<div>Abrir no facebook</div>
 			<svg class="h-4 text-gray-400 fill-current" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
 				<path d="M16 16H2V2H9V0H2C0.89 0 0 0.9 0 2V16C0 17.1 0.89 18 2 18H16C17.1 18 18 17.1 18 16V9H16V16ZM11 0V2H14.59L4.76 11.83L6.17 13.24L16 3.41V7H18V0H11Z"/>
 			</svg>
 		</a>
-		<div class="flex items-center justify-center flex-1 py-3 space-x-2 bg-white rounded shadow-sm"
+		<div class="select-none flex items-center justify-center flex-1 py-3 space-x-2 bg-white rounded shadow-sm"
 				 data-controller="share-button"
 				 data-share-button-text="<%= strip_tags(limit_description_size(@event.details_description, 160)) %>"
 				 data-share-button-title="<%= @event.details_name %>"
