--- a/web/app/components/main_sidebar/group_by_day_list_component.html.erb
+++ b/web/app/components/main_sidebar/group_by_day_list_component.html.erb
@@ -14,7 +14,7 @@
 					<div class="text-sm text-gray-500">daqui <%= distance_of_time_in_words group[0].to_date, DateTime.now %></div>
 				<% end %>
 			</div>
-			<div id="vertical-daily-events" class="py-2 mb-10">
+			<div id="vertical-daily-events" class="py-2">
 				<%= render MainSidebar::HorizontalEventComponent.with_collection(group[1], user: @user, open_in_sidebar: @open_in_sidebar) %>
 			</div>
 		</div>
